setup all projects

--- a/src/js/data/projects.json
+++ b/src/js/data/projects.json
@@ -3,36 +3,36 @@
     "title": "STTA aftermovie",
     "category": "video",
     "imageName": "project-1",
-    "link": "/"
+    "link": "/werk/stta-aftermovie.html"
   },
   {
     "title": "Max v Dijk",
     "category": "website",
     "imageName": "project-1",
-    "link": "/"
+    "link": "/werk/max-v-dijk.html"
   },
   {
     "title": "Studio Tielemans",
     "category": "uitstraling",
     "imageName": "project-1",
-    "link": "/"
+    "link": "/werk/studio-tielemans.html"
   },
   {
     "title": "Video's",
     "category": "video",
     "imageName": "project-1",
-    "link": "/"
+    "link": "/werk/video-s.html"
   },
   {
     "title": "Travel enco",
     "category": "magazine",
     "imageName": "project-1",
-    "link": "/"
+    "link": "/werk/travel-enco.html"
   },
   {
     "title": "Never Created",
     "category": "uitstraling",
     "imageName": "project-1",
-    "link": "/"
+    "link": "/werk/never-created.html"
   }
 ]
