--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "@barba/core": "^2.9.2",
     "gsap": "^3.0.2",
-    "imagesloaded": "^4.1.4"
+    "imagesloaded": "^4.1.4",
+    "smooth-scrollbar": "^8.5.1",
+    "yt-player": "^3.4.3"
   }
 }
